feat: add initial HTML layout with header, navigation, search forms, and Tailwind CSS configuration.

--- a/views/layout.html
+++ b/views/layout.html
@@ -382,7 +382,7 @@
                     var isOpen = !drawer.classList.contains('hidden');
                     if (isOpen) {
                         drawer.classList.add('hidden');
-                        btn.innerHTML = '<iconify-icon icon="lucide:search"></iconify-icon> Search';
+                        btn.innerHTML = '<iconify-icon icon="lucide:search"></iconify-icon> Search Listings';
                     } else {
                         drawer.classList.remove('hidden');
                         btn.innerHTML = '<iconify-icon icon="lucide:x"></iconify-icon> Close';
